# resource-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main  main.cpp
src/resmanager/: resmanager.h  resmanager.hpp
src/resmanager/detail/: cache.hpp  hashing.hpp  loader.hpp  version.hpp
src/resmanager/internal/: cache.h  hashing.h  loader.h  version.h
src/resmananger/internal/: cache.h  loader.h
